--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema GM - Gestão Completa para MEI, Pequenas e Médias Empresas</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<img src="https://github.com/Marottu/GM/raw/main/ChatGPT%20Image%209%20de%20jul.%20de%202025%2C%2018_07_20.png" alt="Imagem da cafeteria">    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
         
@@ -782,4 +781,5 @@
         });
     </script>
 </body>
+
 </html>
