Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema GM - Gestão Completa para MEI, Pequenas e Médias Empresas</title>
-<img src="https://github.com/Marottu/GM/raw/main/ChatGPT%20Image%209%20de%20jul.%20de%202025%2C%2018_07_20.png" alt="Imagem da cafeteria">    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
         
@@ -290,8 +290,7 @@
                                 <p class="mb-4">Área para sua imagem personalizada</p>
                                 <div class="upload-instruction">
                                     <p class="text-sm">Para adicionar sua imagem da cafeteria:</p>
-                                    <p class="text-xs mt-2 font-mono">Substitua o src da tag img abaixo pelo caminho da sua imagem CAFETERIA.jpg</p>
-                                    <p class="text-xs mt-1 font-mono">ou faça upload no seu servidor e atualize o link</p>
+                                    <img src="https://github.com/Marottu/GM/raw/main/ChatGPT%20Image%209%20de%20jul.%20de%202025%2C%2018_07_20.png" alt="Imagem da cafeteria">   
                                 </div>
                             </div>
                         </div>
