--- a/index.html
+++ b/index.html
@@ -347,15 +347,14 @@
                                 <i class="fas fa-image text-4xl mb-4"></i>
                                 <p class="mb-4">Área para sua imagem personalizada</p>
                                 <div class="upload-instruction">
-                                    <p class="text-sm">Para adicionar sua imagem da cafeteria:</p>
-                                    <p class="text-xs mt-2 font-mono">Substitua o src da tag img abaixo pelo caminho da sua imagem CAFETERIA.jpg</p>
-                                    <p class="text-xs mt-1 font-mono">ou faça upload no seu servidor e atualize o link</p>
+                                    <img src="https://github.com/Marottu/GM/raw/main/ChatGPT%20Image%209%20de%20jul.%20de%202025%2C%2018_07_20.png" alt="Imagem da cafeteria">
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="absolute -bottom-6 -left-6 bg-white p-4 rounded-xl shadow-lg">
                         <div class="flex items-center space-x-2">
+
                             <i class="fas fa-check-circle text-orange-500"></i>
                             <span class="font-semibold text-gray-800">Atendimento Personalizado</span>
                         </div>
@@ -912,3 +911,4 @@
 </body>
 </html>
 ```
+
