--- a/index.html
+++ b/index.html
@@ -899,11 +899,50 @@
                     alert('Seu contato foi enviado para nosso WhatsApp! Entraremos em contato em breve.');
                 });
             }
-        });
+      });
+        <!-- CHAT DE ATENDIMENTO COM IA -->
+<div id="chat-container" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">
+  <button id="toggleChat" style="background:#007bff;color:white;border:none;padding:10px 15px;border-radius:50%;cursor:pointer;">💬</button>
+  <div id="chatBox" style="display:none;background:white;width:320px;height:400px;border-radius:15px;box-shadow:0 0 10px rgba(0,0,0,0.3);padding:10px;">
+    <h3 style="margin:0 0 10px 0;">Atendimento IA 🤖</h3>
+    <div id="messages" style="height:300px;overflow-y:auto;border:1px solid #ccc;padding:5px;"></div>
+    <input id="userInput" placeholder="Digite sua dúvida..." style="width:75%;padding:5px;">
+    <button onclick="sendMessage()" style="padding:5px 10px;">Enviar</button>
+  </div>
+</div>
+
+<script>
+document.getElementById("toggleChat").addEventListener("click", () => {
+  const box = document.getElementById("chatBox");
+  box.style.display = box.style.display === "none" ? "block" : "none";
+});
+
+async function sendMessage() {
+  const input = document.getElementById("userInput");
+  const messages = document.getElementById("messages");
+  const userMsg = input.value.trim();
+  if (!userMsg) return;
+  messages.innerHTML += `<p><strong>Você:</strong> ${userMsg}</p>`;
+  input.value = "";
+
+  const response = await fetch("https://api-inference.huggingface.co/models/microsoft/DialoGPT-small", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ inputs: userMsg })
+  });
+
+  const data = await response.json();
+  const botReply = data?.generated_text || "Desculpe, não entendi bem. Pode repetir?";
+  messages.innerHTML += `<p><strong>IA:</strong> ${botReply}</p>`;
+  messages.scrollTop = messages.scrollHeight;
+}
+</script>
+
     </script>
 </body>
 </html>
 ```
+
 
 
 
